# user-control

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
src/: __init__.py  __main__.py
src/rf_serial_gui/: __init__.py  config.py  gui.py  main.py  serial_handler.py  validator.py
tests/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_serial_handler.py  test_validator.py
